# miasteczko

./: .gitignore  .gitmodules  CMakeLists.txt  ISSUE_TEMPLATE.md  README.md  main.cpp
data/config/: easyloggingpp.conf
include/: AnimatedSprite.hpp  Animation.hpp  AppStateCode.hpp  CollisionBox.hpp  FpsCounter.hpp  Game.hpp  GameObjectFactory.hpp  GameObjectLoader.hpp  IAppState.hpp  ILevelObject.hpp  IObject.hpp  ITextureProvider.hpp  Level.hpp  LevelLoader.hpp  LevelObjectData.hpp  LevelObjectFactory.hpp  MainLoopController.hpp  Menu.hpp  PassiveRenderRectangle.hpp  PassiveTexturedRectangle.hpp  Player.hpp  ResourcesProvider.hpp  Text.hpp  TextFactory.h  TextFactory.hpp  TextureContainer.hpp  app.hpp  config.hpp  config.linux.hpp  config.win.hpp  level.hpp  passive-game-object-mock.hpp  resources.textures.hpp
src/: AnimatedSprite.cpp  Animation.cpp  CMakeLists.txt  CollisionBox.cpp  FpsCounter.cpp  Game.cpp  GameObjectFactory.cpp  GameObjectLoader.cpp  Level.cpp  LevelLoader.cpp  LevelObjectFactory.cpp  MainLoopController.cpp  Menu.cpp  PassiveRenderRectangle.cpp  PassiveTexturedRectangle.cpp  Player.cpp  ResourcesProvider.cpp  Text.cpp  TextFactory.cpp  TextureContainer.cpp  app.cpp  main.cpp  passive-game-object-mock.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  CollisionBoxTests.cpp  GameObjectFactoryTests.cpp  LevelObjectFactoryTests.cpp  PlayerTests.cpp  main.cpp
tests/miasteczko-ut-tests.dir/Release/miastecz.99B95BB0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  miasteczko-ut-tests.lastbuildstate
