include_directories(../include)
file(GLOB_RECURSE SOURCES "*.cpp")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
set(EXECUTABLE_APP_NAME "miasteczko-app")

add_executable(${EXECUTABLE_APP_NAME} ${SOURCES})
target_link_libraries(${EXECUTABLE_APP_NAME} ${SFML_LIBRARIES})

IF(WIN32) 
  	if(MSVC) 
  		set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.. PROPERTY VS_STARTUP_PROJECT ${EXECUTABLE_APP_NAME})
    	set_target_properties(${EXECUTABLE_APP_NAME} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
		file(COPY ${DEBUG_DLLS} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug)
		file(COPY ${RELEASE_DLLS} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release)
	endif()
endif()